# virtual_terminal_kotlin

./: .gitignore  CMakeLists.txt  kotlin.cmake
src/common/: DefaultTerminal.kt  SystemError.kt  SystemTerminal.kt  SystemTerminalCallbacks.kt  Terminal.kt  TerminalCallbacks.kt  TerminalPollingTask.kt  Wrappers.kt  windows_error.hpp
src/java/: DefaultTerminal.kt  SystemTerminal.kt  Terminal.kt  WindowsSystemTerminal.kt  error_env.hpp  jni_windows.cpp
